--- a/index.css
+++ b/index.css
@@ -206,7 +206,7 @@ li:hover {
     }
 }
 
-/* @media screen and (max-width: 820px){
+@media screen and (max-width: 820px){
     .nav-links {
         position: absolute;
         right: 0px;
@@ -231,27 +231,27 @@ li:hover {
         display: block;
     }
     .inner-section {
-        flex-direction: column;
+        flex-direction: column!important;
     }
     .section-text {
-        order: 2;
-        text-align: center;
+        order: 2!important;
+        text-align: center!important;
     }
     .section-heading {
-        font-size: 1.5rem;
+        font-size: 1.5rem!important;
     }
 
     .changeText {
-        font-size: 1.2rem;
+        font-size: 1.2rem!important;
     }
 
     .section-para {
-        font-size: 1rem;
+        font-size: 1rem!important;
     }
 
     .section-image {
-        width: 70%;
-        order: 1;
+        width: 70%!important;
+        order: 1!important;
     }
 
     .section-social {
@@ -260,31 +260,31 @@ li:hover {
 
     .section-social,
     i {
-        margin-left: auto;
-        margin-right: auto;
+        margin-left: auto!important;
+        margin-right: auto!important;
     }
 
     .skill-text {
-        font-size: 2rem;
+        font-size: 2rem!important;
     }
 
     .skills {
-        display: none;
+        display: none!important;
     }
 
     .mobile-skills {
-        display: grid;
+        display: grid!important;
         width: 300px;
     }
 
     .project {
-        display: none;
+        display: none!important;
     }
 
     .mobile-project {
-        display: block;
+        display: block!important;
     }
-} */
+}
 
 @media screen and (max-width: 768px) {
 
