--- a/index.css
+++ b/index.css
@@ -207,6 +207,10 @@ li:hover {
 }
 
 @media screen and (max-width: 820px){
+    html,
+    body {
+        overflow-x: hidden !important;
+    }
     .nav-links {
         position: absolute;
         right: 0px;
@@ -286,7 +290,7 @@ li:hover {
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 321px) and (max-width: 768px) {
 
     html,
     body {
