--- a/index.css
+++ b/index.css
@@ -206,7 +206,7 @@ li:hover {
     }
 }
 
-@media screen and (max-width: 820px){
+/* @media screen and (max-width: 820px){
     html,
     body {
         overflow-x: hidden !important;
@@ -288,9 +288,9 @@ li:hover {
     .mobile-project {
         display: block!important;
     }
-}
+} */
 
-@media screen and (min-width: 321px) and (max-width: 768px) {
+@media screen and (max-width: 768px) {
 
     html,
     body {
